--- a/.github/workflows/arduino-lint.yaml
+++ b/.github/workflows/arduino-lint.yaml
@@ -10,3 +10,4 @@ jobs:
         uses: arduino/arduino-lint-action@v2.0.0
         with:
           compliance: strict
+          library-manager: update
